[package]
name = "aprs-rtp"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
crc = "3.4.0"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = { version = "0.6.3", features = ["all"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
