[package]
name = "aprs-rtp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Decode 1200-baud APRS packets from ka9q-radio RTP multicast audio streams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Deatojef/aprs-rtp"
readme = "README.md"
keywords = ["aprs", "rtp", "ham-radio", "ax25", "sdr"]
categories = ["network-programming", "multimedia::audio", "asynchronous"]

[dependencies]
bytes = "1.11.1"
crc = "3.4.0"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = { version = "0.6.3", features = ["all"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
toml = "1.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
